# auto-curation

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  career_transition_advice.md  conftest.py  exhibition_concept_2026.md  exhibitions.db  main.py  mypy.ini  pyproject.toml  requirements.txt  run_collector.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  parser_request.md
.github/workflows/: ci.yml  health-check.yml
data/: MUSEUM_DIGITAL_RESOURCES.md
data/moma_collection/: Artists.csv  README.md
data/tate_collection/: README.md
docs/: README.md  architecture.md  cli_reference.md  data_sources.md  europe_integration.md
docs/audits/: security-audit-report.md  stability-audit-report.md
docs/plans/: batch-scrape-20260528_153440.json  batch-scrape-20260528_153610.json  batch-scrape-20260528_160825.json  batch-scrape-20260528_160916.json  batch-scrape-20260528_163436.json  batch-scrape-20260528_164459.json  duplicate-report.md  health-check-report-20260527_010831.md  health-check-report-20260527_091435.md  health-check-results-20260527_010831.json  health-check-results-20260527_091435.json  llm-validation-report-20260527_111534.md  llm-validation-report-20260527_113244.md  llm-validation-report-20260527_115028.md  missing-fields-report.md  phase-4-end-to-end-validation.md  phase-5-expansion-and-polish.md  smoke-test-diagnosis.md  smoke-test-report.md  smoke-test-results.json
docs/superpowers/plans/: 2026-05-24-frontend-i18n-bilingual.md  2026-05-26-async-scraping-and-llm-cache.md
docs/superpowers/specs/: 2026-05-24-frontend-i18n-bilingual-design.md
scripts/: analyze_missing_fields.py  backfill_aic_images.py  backfill_curators.py  backfill_html_images.py  backfill_moma_curators.py  backfill_parser_key.py  batch_scrape.py  cleanup_db_events.py  debug_links.py  dedup_exhibitions.py  diagnose_red.py  enrich_exhibitions.py  health_check.py  migrate_v1_to_v2.py  monitor_runs.py  normalize_dates.py  scraper_history.py  smoke_test.py  validate_artworks.py  validate_llm_parsing.py  validate_post_scrape.py
src/: cache.py  database.py  enrichment.py  llm_parser.py  scraper.py
src/sites/: __init__.py  aic.py  astrup_fearnley.py  baltic.py  barbican.py  base.py  berlin_biennale.py  beyeler.py  biennale.py  brooklyn_museum.py  dia.py  documenta.py  flv.py  guggenheim.py  gwangju_biennale.py  hamburger_bahnhof.py  hammer_museum.py  hayward.py  hirshhorn.py  istanbul_biennale.py  kanazawa21.py  kunsthal.py  kunsthaus.py  kw_institute.py  lacma.py  leeum.py  lenbachhaus.py  liverpool_biennial.py  louisiana.py  lyon_biennale.py  maiiam.py  mass_moca.py  maxxi.py  mca_australia.py  mca_chicago.py  met.py  mmcaseoul.py  moma.py  momat.py  mori.py  (+27 more)
src/web/: app.py
src/web/static/: app.js  style.css
src/web/static/locales/en/: translation.json
src/web/static/locales/zh/: translation.json
src/web/templates/: index.html
tests/: test_async_scraper.py  test_cache.py  test_cache_edge_cases.py  test_database.py  test_database_migration.py  test_enrichment.py  test_llm_parser.py  test_llm_parser_async.py  test_llm_parser_cache.py  test_llm_parser_coverage.py  test_nga_edge.py  test_scraper.py  test_scraper_coverage.py  test_scraper_edge.py  test_scraper_html_paths.py  test_sites_aic.py  test_sites_base.py  test_sites_base_edge.py  test_sites_flv.py  test_sites_flv_guggenheim.py  test_sites_guggenheim.py  test_sites_hirshhorn.py  test_sites_init.py  test_sites_init_coverage.py  test_sites_init_edge.py  test_sites_kunsthaus.py  test_sites_mca_australia.py  test_sites_moma.py  test_sites_mori.py  test_sites_new_museum.py  test_sites_nga.py  test_sites_psa.py  test_sites_remaining.py  test_sites_serpentine.py  test_sites_sharjah.py  test_sites_tate.py  test_sites_vam.py  test_sites_whitney.py  test_sites_wikidata.py
