[project]
name = "auto_curation"
version = "0.1.0"
description = "Auto Curation - Intelligent content curation and art exhibition collector system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "tenacity>=8.0",
    "auto-hub",
]

[tool.uv.sources]
auto-hub = { path = "../auto_hub", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

