[project]
name = "auto_curation"
version = "0.1.0"
description = "Auto Curation - 全球当代艺术展览数据采集与结构化平台"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Haining Yu (Golden0Voyager)" },
]
keywords = ["art", "curation", "exhibitions", "scraping", "llm", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Sociology :: History",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
]
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "tenacity>=8.0",
    "auto-hub",
]

[project.urls]
Homepage = "https://github.com/Golden0Voyager/auto_curation"
Repository = "https://github.com/Golden0Voyager/auto_curation"
Issues = "https://github.com/Golden0Voyager/auto_curation/issues"
Changelog = "https://github.com/Golden0Voyager/auto_curation/blob/main/CHANGELOG.md"

[tool.uv.sources]
auto-hub = { git = "https://github.com/Golden0Voyager/auto_hub.git", branch = "main" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "httpx[socks]>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
extend = "~/.config/ruff/ruff.toml"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "C414",
    "SIM105",
    "SIM102",
    "SIM103",
    "SIM118",
]

[tool.ruff.lint.per-file-ignores]
"src/sites/*.py" = ["E501"]
"src/database.py" = ["SIM105"]

